# mcp-approval-proxy

./: .gitignore  README.md  pyproject.toml
src/mcp_approval_proxy/: __main__.py  middleware.py  proxy.py
src/mcp_approval_proxy/channels/: __init__.py
tests/: test_config.py  test_integration.py  test_middleware.py
