[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mcp-approval-proxy"
version = "0.1.0"
description = "Transparent MCP proxy that gates write/destructive tool calls behind MCP-native elicitation approval"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
keywords = ["mcp", "model-context-protocol", "proxy", "approval", "elicitation"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Development Status :: 3 - Alpha",
]
dependencies = [
    "fastmcp>=3.0.0",
    "httpx>=0.27.0",
    "anyio>=4.0.0",
]

[project.scripts]
approval-proxy = "mcp_approval_proxy.__main__:main"

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/mcp_approval_proxy"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.uv]
dev-dependencies = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
]
